--- a/evolution_prix.html
+++ b/evolution_prix.html
@@ -35,6 +35,7 @@
     <a href="production_consommation.html" style="margin-left: 20px;">Production vs Consommation</a>
     <a href="test.html" style="margin-left: 20px;">Test</a>
     <a href="index.html" style="margin-left: 20px;">Index</a>
+    <a href="consommation_prix.html" style="margin-left: 20px;">Consommation vs Prix</a>
     <svg id="chart" width="900" height="500"></svg>
     <svg id="chart" width="900" height="500"></svg>
 
