--- a/consommation_prix.html
+++ b/consommation_prix.html
@@ -47,8 +47,8 @@
     <h2>Rice Price and Consumption by Year in Madagascar</h2>
     <a href="evolution_prix.html" style="margin-left: 20px;">Evolution des prix</a>
     <a href="production_consommation.html" style="margin-left: 20px;">Production vs Consommation</a>
-    <a href="test.html" style="margin-left: 20px;">Test</a>
-    <a href="index.html" style="margin-left: 20px;">Index</a>
+    <a href="test.html" style="margin-left: 20px;">Rice Price by Region</a>
+    <a href="index.html" style="margin-left: 20px;">Rice Price Trends</a>
     <a href="consommation_prix.html" style="margin-left: 20px;">Consommation vs Prix</a>
     <svg id="chart" width="600" height="500"></svg>
     <script>
